--- a/SchoolProj/SchoolProj/bin/SchoolProj.dll.config
+++ b/SchoolProj/SchoolProj/bin/SchoolProj.dll.config
@@ -10,7 +10,7 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SchoolProj-20220417112023.mdf;Initial Catalog=aspnet-SchoolProj-20220417112023;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="schooldbEntities" connectionString="metadata=res://*/Models.schoolModel.csdl|res://*/Models.schoolModel.ssdl|res://*/Models.schoolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BADRASHIN-BRAN\SQLCATDB;initial catalog=schooldb;persist security info=True;user id=sa;password=toor;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="schooldbEntities" connectionString="metadata=res://*/Models.schoolModel.csdl|res://*/Models.schoolModel.ssdl|res://*/Models.schoolModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLCATDB;initial catalog=schooldb;persist security info=True;user id=sa;password=toor;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
