--- a/SchoolProj/SchoolProj/SchoolProj.csproj
+++ b/SchoolProj/SchoolProj/SchoolProj.csproj
@@ -180,6 +180,9 @@
     <Compile Include="Models\coursetbl.cs">
       <DependentUpon>schoolModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\couselevel.cs">
+      <DependentUpon>schoolModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\enrolltbl.cs">
       <DependentUpon>schoolModel.tt</DependentUpon>
     </Compile>
@@ -191,6 +194,7 @@
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\metaData.cs" />
     <Compile Include="Models\partialClases.cs" />
     <Compile Include="Models\RatingLevels.cs">
       <DependentUpon>schoolModel.tt</DependentUpon>
@@ -213,10 +217,12 @@
     <Compile Include="Models\studenttbl.cs">
       <DependentUpon>schoolModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ValidRecentEnrollment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap - Copy.css" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
@@ -274,6 +280,8 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="Content\toastr.css" />
+    <Content Include="Content\toastr.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -300,6 +308,8 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\toastr.scss" />
+    <Content Include="Content\toastr.less" />
     <None Include="Scripts\jquery-3.6.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
@@ -313,6 +323,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\toastr.js" />
+    <Content Include="Scripts\toastr.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -362,6 +374,8 @@
     <Content Include="Views\enrolltbls\Details.cshtml" />
     <Content Include="Views\enrolltbls\Edit.cshtml" />
     <Content Include="Views\enrolltbls\Index.cshtml" />
+    <Content Include="Views\Shared\_navBar.cshtml" />
+    <Content Include="Views\Shared\_courseSummary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
